syntax = "proto3";
option go_package = "github.com/wenchangshou2/vd-node-manage/rpc-old/pb";


message PublishChannel{
	string id=2;
	string topic=3;
	string action =4;
	string body=5;
}
message SubscribeChannel {
	string topic=2;
}
message SubscribeResult {
	string id=2;
	string topic=3;
	string action =4;
	string body=5;
	// string action=2;
	// string body=3;
}
message Empty{

}

service PubsubService {
	rpc Publish(PublishChannel)returns(Empty);
	rpc Subscribe(SubscribeChannel)returns(stream SubscribeResult);
}